--- a/bridgetown.config.yml
+++ b/bridgetown.config.yml
@@ -20,4 +20,12 @@ url: "" # the base hostname & protocol for your site, e.g. https://example.com
 
 permalink: pretty
 
+content_engine: resource
+
+defaults:
+  - scope:
+      path: "_pages"
+    values:
+      layout: "page"
+
 # timezone: America/Los_Angeles
