--- a/src/_data/site_metadata.yml
+++ b/src/_data/site_metadata.yml
@@ -4,7 +4,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.metadata.myvariable }}.
 
-title: Your awesome title
+title: Tracefunc Food
 tagline: This site is totally awesome
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
