--- a/bridgetown.config.yml
+++ b/bridgetown.config.yml
@@ -26,7 +26,7 @@ defaults:
   - scope:
       path: "_pages"
     values:
-      layout: "page"
+      layout: "recipe"
       template_engine: erb
 
 # timezone: America/Los_Angeles
