--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '2.7.2'
     - uses: actions/setup-node@v2-beta
       with:
         node-version: '13'
